recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value longueur
	if (longueur == 0) {
            ^Tree:8: error: not found: value x
		x = getX();
                ^Tree:9: error: not found: value y
		y = getY();
                ^Tree:10: error: not found: value cap
		cap = getCap();
                ^Tree:13: error: not found: value x
		setPos(x, y);
                       ^Tree:14: error: not found: value cap
		setCap(cap);
                       ^